kotlin/programming-kotlin_code/oop/output/companionerr.output
companionerr.kts:12:26: error: unresolved reference: minimumBreak
MachineOperator("Mater").minimumBreak() //ERROR
                         ^
